# csrng

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  ProjectHome.md  README  TODO  config.h  config.h.in  configure  configure.ac  csprngd.service  flow.odg  libtool
DRBG_TEST_VECTORS/: CTR_DRBG.rsp  CTR_DRBG.txt  Dual_EC_DRBG.rsp  Dual_EC_DRBG.txt  HMAC_DRBG.rsp  HMAC_DRBG.txt  Hash_DRBG.rsp  Hash_DRBG.txt  Readme.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
include/: Makefile  Makefile.am  Makefile.in
include/csprng/: csprng.h  fips.h  havege.h  helper_utils.h  http_rng.h  memt19937ar-JH.h  nist_ctr_drbg.h  qrbg-c.h  sha1_rng.h
man/: Makefile  Makefile.am  Makefile.in  README  TestU01_raw_stdin_input_with_log.1  TestU01_raw_stdin_input_with_log.1_auto  create_from_help_message.sh  csprng-generate.1  csprng-generate.1_auto  csprngd.8  csprngd.8_auto  how-to-write-unix-man-page.html
src/: Makefile  Makefile.am  Makefile.in  QRBG.cpp  QRBG.h  csprng.c  fips.c  havege.c  havege.h  havegecollect.c  havegecollect.h  helper_utils.c  http_rng.c  memt19937ar-JH.c  nist_ctr_drbg.h  nist_ctr_drbg_mod.c  oneiteration.h  qrbg-c.cpp  sha1_rng.c
test/: Makefile  Makefile.am  Makefile.in  TestU01.c  TestU01_raw_stdin_input.c  TestU01_raw_stdin_input_with_log.c  binary_input  ctr_drbg_test  ctr_drbg_test.c  havege_main.c  http_main.c  jh_ctr_drbg_main.py  memt_main.c  openssl-rand.c  openssl-rand_main.c  qrbg_main.c  run.sh  server.py  sha1_main.c  speed.sh
utils/: Makefile  Makefile.am  Makefile.in  a.sh  csprng-daemon.c  csprng-generate.c  csprngd.c  generate_random_data.c  jh_ctr_drbg_main.py  main.c  random_interface_linux.c  random_interface_linux.h
