include $(top_srcdir)/common.mk

nobase_include_HEADERS = \
	csprng/csprng.h \
	csprng/nist_ctr_drbg.h \
	csprng/havege.h \
	csprng/memt19937ar-JH.h \
	csprng/sha1_rng.h \
        csprng/qrbg-c.h \
        csprng/http_rng.h \
        csprng/fips.h \
	csprng/helper_utils.h

MAINTAINERCLEANFILES = Makefile.in


